--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,45 @@
-plugins {
-	id 'org.springframework.boot' version '2.3.3.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id 'java'
-}
-
-group = 'com.smartbet'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
+buildscript {
+	ext {
+		springBootVersion = "2.3.3.RELEASE"
+	}
+	repositories {
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
+	}
+	dependencies {
+		classpath "com.github.ben-manes:gradle-versions-plugin:0.17.0"
+		classpath "io.spring.gradle:dependency-management-plugin:1.0.4.RELEASE"
+		classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
 	}
 }
 
-repositories {
-	mavenCentral()
-}
+subprojects {
+	group = 'com.smartbet'
+	version = '0.0.1-SNAPSHOT'
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	apply from: "${rootProject.projectDir}/java.gradle"
+	apply from: "${rootProject.projectDir}/dependenciesManagement.gradle"
+	// This plugin adds the dependencyUpdates admintask to show outdated dependencies
+	apply plugin: "com.github.ben-manes.versions"
+
+	dependencies {
+		compile "org.springframework.boot:spring-boot-starter"
+		compile "org.springframework.boot:spring-boot-starter-web"
+		compile "org.springframework.boot:spring-boot-starter-validation"
+		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+		compileOnly "org.springframework.boot:spring-boot-configuration-processor"
+		compile "com.google.guava:guava"
+		annotationProcessor "org.projectlombok:lombok:1.18.8"
+		compileOnly "org.projectlombok:lombok:1.18.8"
+		testAnnotationProcessor "org.projectlombok:lombok:1.18.8"
+		testCompileOnly "org.projectlombok:lombok:1.18.8"
+		testFixturesAnnotationProcessor "org.projectlombok:lombok:1.18.8"
+		testFixturesCompileOnly "org.projectlombok:lombok:1.18.8"
+		testCompile "org.springframework.boot:spring-boot-starter-test"
+		testCompile "org.assertj:assertj-core"
 	}
-}
 
-test {
-	useJUnitPlatform()
+	// Ensure configuration processor is executed before Java compilation
+	compileJava.dependsOn(processResources)
 }
