--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ subprojects {
 
 	dependencies {
 		compile "org.springframework.boot:spring-boot-starter"
+		compile "org.springframework.boot:spring-boot-starter-web"
 		compile "org.springframework.boot:spring-boot-starter-validation"
 		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 		compileOnly "org.springframework.boot:spring-boot-configuration-processor"
