--- a/server/build.gradle
+++ b/server/build.gradle
@@ -4,6 +4,7 @@ bootJar.archiveFileName = "smartbet.jar"
 
 moduleDependencies {
     module ":object-mapping"
+    module ":main"
 }
 
 task copyWebAppFilesIntoPublic {
