Changed ports for clevercould

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     mongodb:
       database: smart-bet
 
+server:
+  port: 8060
+
 api:
   footballApi:
     host: api-football-v1.p.rapidapi.com
